--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="gitHubLink">https://github.com/rosannaNaomy/WellMood</string>
+    <string name="linkedInLink">https://www.linkedin.com/in/naomyportillo/</string>
 </resources>
